Version history for TryCatch perl module:

1.000001 - Sat 14th Feb 2009 22:16
  - Attempt to improve installability with old CPAN toolchains

1.000000 - Sat 7th Feb 2009 18:00
  - Initial release